Add detail view and headline in list view

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,10 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_graph"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/nav_graph"
     app:startDestination="@id/overviewFragment">
 
     <fragment
         android:id="@+id/overviewFragment"
         android:name="com.e.accessiblenews.overview.OverviewFragment"
-        android:label="OverviewFragment" />
+        android:label="OverviewFragment">
+        <action
+            android:id="@+id/action_overviewFragment_to_detailFragment"
+            app:destination="@id/detailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/detailFragment"
+        android:name="com.e.accessiblenews.detail.DetailFragment"
+        android:label="DetailFragment">
+        <argument
+            android:name="selectedArticle"
+            app:argType="com.e.accessiblenews.model.Article" />
+    </fragment>
 </navigation>
