--- a/app/src/main/res/layout/grid_view_item.xml
+++ b/app/src/main/res/layout/grid_view_item.xml
@@ -30,7 +30,7 @@
             android:id="@+id/shortHeadlineText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
             android:text="@{article.title}"
             android:padding="8dp"
             app:layout_constraintTop_toBottomOf="@id/newsImage"
