--- a/app/src/main/res/layout/grid_view_item.xml
+++ b/app/src/main/res/layout/grid_view_item.xml
@@ -11,32 +11,45 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/headline_top_margin">
 
-    <ImageView
-        android:id="@+id/newsImage"
-        android:layout_width="match_parent"
-        android:layout_height="170dp"
-        android:scaleType="centerCrop"
-        android:adjustViewBounds="true"
-        android:padding="2dp"
-        app:imageUrl="@{article.imageURLs[0].url}"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+        <ImageView
+            android:id="@+id/newsImage"
+            android:layout_width="177dp"
+            android:layout_height="119dp"
+            android:adjustViewBounds="true"
+            android:paddingEnd="8dp"
+            android:scaleType="centerCrop"
+            app:imageUrl="@{article.imageURLs[0].url}"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
         <TextView
             android:id="@+id/shortHeadlineText"
-            android:layout_width="wrap_content"
+            android:layout_width="218dp"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
+            android:layout_marginEnd="4dp"
             android:text="@{article.title}"
-            android:padding="8dp"
-            app:layout_constraintTop_toBottomOf="@id/newsImage"
-            app:layout_constraintStart_toStartOf="parent"
+            android:textAppearance="@style/ArticleTitle"
             app:layout_constraintEnd_toEndOf="parent"
-            tools:text="@tools:sample/lorem"/>
+            app:layout_constraintStart_toEndOf="@+id/newsImage"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="@string/sample_headline" />
+
+        <TextView
+            android:id="@+id/dateText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@{article.publishedDate}"
+            android:textAppearance="@style/DateText"
+            app:layout_constraintTop_toBottomOf="@id/shortHeadlineText"
+            app:layout_constraintEnd_toEndOf="@+id/shortHeadlineText"
+            app:layout_constraintStart_toStartOf="@+id/shortHeadlineText"
+            tools:layout_editor_absoluteY="55dp"
+            tools:text="May 3rd, 2020" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
