--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,17 @@
         <item name="colorAccent">@color/secondaryDarkColor</item>
         <item name="fontFamily">@font/roboto</item>
         <item name="android:fontFamily">@font/roboto</item>
+        <item name="textAppearanceBody2">@style/DateText</item>
+        <item name="textAppearanceBody1">@style/ArticleTitle</item>
+    </style>
+    
+    <style name="DateText" parent="TextAppearance.MaterialComponents.Body2">
+        <item name="android:textColor">@color/secondaryDarkColor</item>
+    </style>
+
+    <style name="ArticleTitle" parent="TextAppearance.AppCompat.Body1">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
 
