Fix: BindingAdapters.kt to updated Glide methods and add date formatting

--- a/app/src/main/res/layout/grid_view_item.xml
+++ b/app/src/main/res/layout/grid_view_item.xml
@@ -43,7 +43,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="@{article.publishedDate.toString()}"
+            app:publishedDate="@{article.publishedDate.toString()}"
             android:textAppearance="@style/DateText"
             app:layout_constraintTop_toBottomOf="@id/shortHeadlineText"
             app:layout_constraintEnd_toEndOf="@+id/shortHeadlineText"
