--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -75,7 +75,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:padding="10dp"
-                    android:text="@{detailViewModel.selectedArticle.publishedDate.toString()}"
+                    app:publishedDate="@{detailViewModel.selectedArticle.publishedDate.toString()}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/headlineText"
